--- a/YoutubeBatchDownloader.Web/Resources/Home.resx
+++ b/YoutubeBatchDownloader.Web/Resources/Home.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConvertTo" xml:space="preserve">
+    <value>Convert To:</value>
+  </data>
   <data name="Go" xml:space="preserve">
     <value>Go!</value>
   </data>
@@ -126,8 +129,14 @@
   <data name="PasteYourYouTubeHtmlHere" xml:space="preserve">
     <value>Paste your YouTube html here...</value>
   </data>
+  <data name="StandardTextFile" xml:space="preserve">
+    <value>Standard Text File</value>
+  </data>
   <data name="StartIndex" xml:space="preserve">
     <value>Start Index:</value>
+  </data>
+  <data name="ThunderVBS" xml:space="preserve">
+    <value>Thunder VBS</value>
   </data>
   <data name="YouTubeHtml" xml:space="preserve">
     <value>YouTube Html</value>
